--- a/parts/header.html
+++ b/parts/header.html
@@ -3,7 +3,9 @@
         <div class="navbar-content">
             <div class="nav-menu-container nav-menu-left-container">
                 <div class="mobile-menu-toggle" id="mobile-menu-toggle"></div>
-                <!-- wp:navigation {"orientation":"horizontal","itemsJustification":"left","className":"nav-menu nav-menu-left"} /-->
+
+                <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","overlayBackgroundColor":"light","overlayTextColor":"primary","className":"nav-menu nav-menu-left","layout":{"type":"flex","justifyContent":"left","orientation":"horizontal"}} /-->
+
             </div>
             <div class="navbar-logo">
                 <!-- <a class="navbar-brand" href="<?php echo home_url('/'); ?>"> -->
@@ -11,12 +13,23 @@
                 <!-- </a> -->
             </div>
             <div class="nav-menu-container nav-menu-right-container">
-                <!-- wp:navigation {"orientation":"horizontal","itemsJustification":"right","className":"nav-menu nav-menu-right"} /-->
-                <!-- wp:social-links {"className":"nav-socials"} /-->
+
+                <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-right","layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"}} /-->
+
+                <!-- wp:social-links {"iconColor":"primary","iconColorValue":"#0a3e6a","openInNewTab":true,"className":"is-style-logos-only "} -->
+                <ul class="wp-block-social-links has-icon-color is-style-logos-only">
+                    <!-- wp:social-link {"service":"facebook"} /-->
+                </ul>
+                <!-- /wp:social-links -->
+
             </div>
         </div>
         <div class="mobile-menu" id="mobile-menu">
-            <!-- wp:navigation {"orientation":"vertical","className":"mobile-nav-menu"} /-->
+
+            <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","justifyContent":"center","orientation":"vertical","flexWrap":"nowrap"}} /-->
+
+            <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","justifyContent":"center","orientation":"vertical","flexWrap":"nowrap"}} /-->
+
         </div>
     </nav>
 </header>
