--- a/parts/header.html
+++ b/parts/header.html
@@ -1,35 +1,47 @@
-<header>
-    <nav class="navbar navbar-solid">
-        <div class="navbar-content">
-            <div class="nav-menu-container nav-menu-left-container">
-                <div class="mobile-menu-toggle" id="mobile-menu-toggle"></div>
+<!-- wp:group {"metadata":{"name":"NAVBAR DIV"},"className":"navbar navbar-solid","layout":{"type":"constrained","contentSize":""}} -->
+<div class="wp-block-group navbar navbar-solid">
+    <!-- wp:group {"metadata":{"name":"NAVBAR CONTENT"},"align":"full","className":"navbar-content","layout":{"type":"constrained","contentSize":""}} -->
+    <div class="wp-block-group alignfull navbar-content"><!-- wp:html -->
+        <div class="nav-menu-container nav-menu-left-container">
+            <div class="mobile-menu-toggle" id="mobile-menu-toggle"></div>
+            <!-- /wp:html -->
 
-                <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","overlayBackgroundColor":"light","overlayTextColor":"primary","className":"nav-menu nav-menu-left","layout":{"type":"flex","justifyContent":"left","orientation":"horizontal"}} /-->
+            <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-left","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
 
-            </div>
-            <div class="navbar-logo">
-                <!-- <a class="navbar-brand" href="<?php echo home_url('/'); ?>"> -->
+            <!-- wp:html -->
+        </div>
+        <!-- /wp:html -->
+
+        <!-- wp:html {"metadata":{"name":"LOGO ANIMATION"}} -->
+        <div class="navbar-logo">
+            <a class="navbar-brand" href="https://kcg.staging/">
                 <div class="logo" id="logo"></div>
-                <!-- </a> -->
-            </div>
-            <div class="nav-menu-container nav-menu-right-container">
-
-                <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-right","layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"}} /-->
-
-                <!-- wp:social-links {"iconColor":"primary","iconColorValue":"#0a3e6a","openInNewTab":true,"className":"is-style-logos-only "} -->
-                <ul class="wp-block-social-links has-icon-color is-style-logos-only">
-                    <!-- wp:social-link {"service":"facebook"} /-->
-                </ul>
-                <!-- /wp:social-links -->
-
-            </div>
+            </a>
         </div>
-        <div class="mobile-menu" id="mobile-menu">
+        <!-- /wp:html -->
 
-            <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","justifyContent":"center","orientation":"vertical","flexWrap":"nowrap"}} /-->
+        <!-- wp:html -->
+        <div class="nav-menu-container nav-menu-right-container">
+            <!-- /wp:html -->
 
-            <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","justifyContent":"center","orientation":"vertical","flexWrap":"nowrap"}} /-->
+            <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-right","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
 
+            <!-- wp:html -->
         </div>
-    </nav>
-</header>
+        <!-- /wp:html -->
+    </div>
+    <!-- /wp:group -->
+
+    <!-- wp:html -->
+    <div class="mobile-menu" id="mobile-menu">
+        <!-- /wp:html -->
+
+        <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
+
+        <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
+
+        <!-- wp:html -->
+    </div>
+    <!-- /wp:html -->
+</div>
+<!-- /wp:group -->
