updated template parts

--- a/parts/header.html
+++ b/parts/header.html
@@ -6,7 +6,7 @@
             <div class="mobile-menu-toggle" id="mobile-menu-toggle"></div>
             <!-- /wp:html -->
 
-            <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-left","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
+            <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-left","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
 
             <!-- wp:html -->
         </div>
@@ -14,7 +14,7 @@
 
         <!-- wp:html {"metadata":{"name":"LOGO ANIMATION"}} -->
         <div class="navbar-logo">
-            <a class="navbar-brand" href="https://kcg.staging/">
+            <a class="navbar-brand" href="https://kcg.org.uk/">
                 <div class="logo" id="logo"></div>
             </a>
         </div>
@@ -24,7 +24,7 @@
         <div class="nav-menu-container nav-menu-right-container">
             <!-- /wp:html -->
 
-            <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-right","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
+            <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-right","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
 
             <!-- wp:html -->
         </div>
@@ -36,9 +36,9 @@
     <div class="mobile-menu" id="mobile-menu">
         <!-- /wp:html -->
 
-        <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
+        <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
 
-        <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
+        <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
 
         <!-- wp:html -->
     </div>
