minor improvements and brand/site updates

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,5 +1,5 @@
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|60","bottom":"var:preset|spacing|60","left":"var:preset|spacing|60","right":"var:preset|spacing|60"}},"elements":{"link":{"color":{"text":"var:preset|color|light"}}}},"backgroundColor":"primary","textColor":"light","layout":{"type":"constrained","contentSize":"1024px"}} -->
-<div class="wp-block-group has-light-color has-primary-background-color has-text-color has-background has-link-color"
+<!-- wp:group {"tagName":"footer","style":{"spacing":{"padding":{"top":"var:preset|spacing|60","bottom":"var:preset|spacing|60","left":"var:preset|spacing|60","right":"var:preset|spacing|60"}}},"backgroundColor":"primary","textColor":"light","layout":{"type":"constrained","contentSize":"1024px"}} -->
+<footer class="wp-block-group has-light-color has-primary-background-color has-text-color has-background"
         style="padding-top:var(--wp--preset--spacing--60);padding-right:var(--wp--preset--spacing--60);padding-bottom:var(--wp--preset--spacing--60);padding-left:var(--wp--preset--spacing--60)">
         <!-- wp:columns {"style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"}}}} -->
         <div class="wp-block-columns" style="padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">
@@ -11,7 +11,7 @@
                                 Get in touch</h4>
                         <!-- /wp:heading -->
 
-                        <!-- wp:navigation {"ref":1791,"overlayMenu":"never","style":{"typography":{"textTransform":"uppercase","fontStyle":"normal","fontWeight":"600"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} /-->
+                        <!-- wp:navigation {"ref":1791,"textColor":"light","overlayMenu":"never","style":{"typography":{"textTransform":"uppercase","fontStyle":"normal","fontWeight":"600"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} /-->
                 </div>
                 <!-- /wp:column -->
 
@@ -23,7 +23,7 @@
                                 Community</h4>
                         <!-- /wp:heading -->
 
-                        <!-- wp:navigation {"ref":1790,"overlayMenu":"never","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} /-->
+                        <!-- wp:navigation {"ref":1790,"textColor":"light","overlayMenu":"never","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} /-->
                 </div>
                 <!-- /wp:column -->
 
@@ -35,7 +35,7 @@
                                 Information</h4>
                         <!-- /wp:heading -->
 
-                        <!-- wp:navigation {"ref":1792,"overlayMenu":"never","style":{"typography":{"textTransform":"uppercase","fontStyle":"normal","fontWeight":"600"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} /-->
+                        <!-- wp:navigation {"ref":1792,"textColor":"light","overlayMenu":"never","style":{"typography":{"textTransform":"uppercase","fontStyle":"normal","fontWeight":"600"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} /-->
                 </div>
                 <!-- /wp:column -->
         </div>
@@ -56,5 +56,5 @@
                 is a
                 Charitable Incorporated Organisation (CIO) registered in England &amp; Wales - Number 1158254</p>
         <!-- /wp:paragraph -->
-</div>
+</footer>
 <!-- /wp:group -->
