--- a/parts/header.html
+++ b/parts/header.html
@@ -1,12 +1,14 @@
-<!-- wp:group {"metadata":{"name":"NAVBAR DIV"},"className":"navbar navbar-solid","layout":{"type":"constrained","contentSize":""}} -->
-<div class="wp-block-group navbar navbar-solid">
-    <!-- wp:group {"metadata":{"name":"NAVBAR CONTENT"},"align":"full","className":"navbar-content","layout":{"type":"constrained","contentSize":""}} -->
-    <div class="wp-block-group alignfull navbar-content"><!-- wp:html -->
+<!-- wp:group {"metadata":{"name":"NAVBAR DIV"},"className":"navbar navbar-solid","style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"},"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"default"}} -->
+<div class="wp-block-group navbar navbar-solid"
+    style="margin-top:0;margin-bottom:0;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">
+    <!-- wp:group {"metadata":{"name":"NAVBAR CONTENT"},"align":"full","className":"navbar-content","style":{"spacing":{"padding":{"top":"1vh","bottom":"1vh","left":"0","right":"0"}}},"layout":{"type":"default"}} -->
+    <div class="wp-block-group alignfull navbar-content"
+        style="padding-top:1vh;padding-right:0;padding-bottom:1vh;padding-left:0"><!-- wp:html -->
         <div class="nav-menu-container nav-menu-left-container">
             <div class="mobile-menu-toggle" id="mobile-menu-toggle"></div>
             <!-- /wp:html -->
 
-            <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-left","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
+            <!-- wp:navigation {"ref":1612,"overlayMenu":"never","className":"nav-menu nav-menu-left","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
 
             <!-- wp:html -->
         </div>
@@ -24,7 +26,7 @@
         <div class="nav-menu-container nav-menu-right-container">
             <!-- /wp:html -->
 
-            <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"nav-menu nav-menu-right","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
+            <!-- wp:navigation {"ref":1613,"overlayMenu":"never","className":"nav-menu nav-menu-right","layout":{"type":"flex","justifyContent":"center","orientation":"horizontal","flexWrap":"nowrap"}} /-->
 
             <!-- wp:html -->
         </div>
@@ -36,9 +38,9 @@
     <div class="mobile-menu" id="mobile-menu">
         <!-- /wp:html -->
 
-        <!-- wp:navigation {"ref":1612,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
+        <!-- wp:navigation {"ref":1612,"overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
 
-        <!-- wp:navigation {"ref":1613,"textColor":"primary","overlayMenu":"never","className":"mobile-nav-menu","style":{"typography":{"fontStyle":"normal","fontWeight":"600","textTransform":"uppercase"}},"fontFamily":"headings","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
+        <!-- wp:navigation {"ref":1613,"overlayMenu":"never","className":"mobile-nav-menu","layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} /-->
 
         <!-- wp:html -->
     </div>
